--- a/5.state/temperature/second.html
+++ b/5.state/temperature/second.html
@@ -23,24 +23,56 @@
             f: '화씨'
         }
 
+        // 섭씨를 화씨로 변환해주는 함수 toCelsius(섭씨 온도값)
+        function toFahrenheit(celsius) {
+            return (celsius * 9) / 5 + 32;
+        }
+
+        // 화씨를 섭씨로 변환해주는 함수 toCelsius(화씨 온도값)
+        function toCelsius(fahrenheit) {
+            return ((fahrenheit - 32) * 5) / 9;
+        }
+
+        // 실제 온도 변환 수행 및 문자열 값에 대한 유효성 처리 함수 tryConvert(온도값(temperature), toC or toF)
+        function tryConvert(temperature, convert) {
+            // convert : callback function
+            const input = parseFloat(temperature);
+
+            // 만약 사용자가 숫자가 아닌 문자를 입력하였을 경우,
+            if (Number.isNaN(input)) {
+                return "";
+            }
+
+            const output = convert(input);
+            const rounded = Math.round(output * 1000) / 1000;
+
+            return rounded.toString();
+        }
+
         const Calculator = () => {
             const [state, setState] = useState({ temperature: '', scale: '' }); // '' = input의 초기값
 
-            const changeHanlder = (temperature) => {
-                console.log(temperature);   // 자식 컴포넌트가 파라미터를 통해 전달한 값을 출력
-                // setState({ temperature: event.target.value });  // temperature 프로퍼티의 값을 바꾼 새로운 객체로 상태(state)를 갱신
+            const changeHanlder = (inputValue, scale) => {
+                console.log(inputValue);   // 자식 컴포넌트가 파라미터를 통해 전달한 값을 출력
+
+                const updatedState = { temperature: inputValue, scale: scale };
+                setState(updatedState);  // temperature 프로퍼티의 값을 바꾼 새로운 객체로 상태(state)를 갱신
             };
 
             // props로 내려보내기 전에 변환, 추출 작업을 수행
             const temperature = state.temperature;
+            const scale = state.scale;
+
+            // 변환 작업
+            const fahrenheit = scale === 'c' ? tryConvert(temperature, toFahrenheit) : temperature;
+            const celsius = scale === 'f' ? tryConvert(temperature, toCelsius) : temperature;
 
             return (
                 <>
-                    <TemperatureInput scale='c' temperature={temperature} onTemperatureChange={changeHanlder}/>
-                    <TemperatureInput scale='f' temperature={temperature} onTemperatureChange={changeHanlder}/>
-                    <BoilingVerdict celsius={temperature}/>
+                    <TemperatureInput scale='c' temperature={celsius} onTemperatureChange={changeHanlder}/>
+                    <TemperatureInput scale='f' temperature={fahrenheit} onTemperatureChange={changeHanlder}/>
+                    <BoilingVerdict celsius={celsius}/>
                 </>
-            
             );
         };
 
@@ -51,9 +83,10 @@
                 // event.target.value: 사용자가 <input />에 입력한 값(value)
 
                 const inputValue = event.target.value;  // 입력한 값을 받아왔음
+                const scale = props.scale;
 
                 // 부모함수를 호출
-                props.onTemperatureChange(inputValue);
+                props.onTemperatureChange(inputValue, scale);
             }
 
             return (
